# LPFoundations_PDE

./: README.md  pyproject.toml
.github/workflows/: pipeline.yml
life_expectancy/: cleaning.py  create_fixtures.py  load_file_strategy.py
life_expectancy/tests/: conftest.py  create_fixtures.py  test_cleaning.py
life_expectancy/tests/fixtures/: eu_life_expectancy_raw.tsv
