[project]
name = "life_expectancy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
description = "First assignment of the Foundations Learning Path"
authors = [{name="Paula", email="pauladomingeuzencinas@gmail.com"}]
dependencies = ["pandas"]

[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov", "toml"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["life_expectancy"]

[tool.pylint."messages control"]
disable = [
   "missing-module-docstring",
   "missing-function-docstring",
   "line-too-long",
   "unused-argument"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*","*/create_fixtures.py" # omit test files
]

[tool.coverage.report]
fail_under = 80